[gd_scene load_steps=9 format=2]

[ext_resource path="res://models/enemies/Angel1.glb" type="PackedScene" id=1]
[ext_resource path="res://materials/light.tres" type="Material" id=2]
[ext_resource path="res://scripts/enemies/Angel1.gd" type="Script" id=3]
[ext_resource path="res://animations/angel1death.tres" type="Animation" id=4]
[ext_resource path="res://audio/angelAttack.wav" type="AudioStream" id=5]

[sub_resource type="SphereShape" id=1]
radius = 1.96816

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sphere:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.156868, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sphere:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.156868, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Sphere:scale:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.156868, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("Spatial/Circle004:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sphere:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Circle:translation:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Circle:translation:y")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("Circle:translation:z")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("Circle001:translation:x")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("Circle001:translation:y")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/10/type = "bezier"
tracks/10/path = NodePath("Circle001:translation:z")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/11/type = "bezier"
tracks/11/path = NodePath("Circle002:translation:x")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/12/type = "bezier"
tracks/12/path = NodePath("Circle002:translation:y")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/13/type = "bezier"
tracks/13/path = NodePath("Circle002:translation:z")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/14/type = "bezier"
tracks/14/path = NodePath("Circle003:translation:x")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/15/type = "bezier"
tracks/15/path = NodePath("Circle003:translation:y")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/16/type = "bezier"
tracks/16/path = NodePath("Circle003:translation:z")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/17/type = "value"
tracks/17/path = NodePath(".:visible")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="ArrayMesh" id=5]
resource_name = "Angel1_Circle004"
surfaces/0 = {
"aabb": AABB( -1.10027, 0, -1.10027, 2.20054, 0.264341, 2.20054 ),
"array_data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 191, 235, 0, 127, 193, 0, 0, 0, 60, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 191, 0, 129, 127, 63, 0, 0, 0, 60, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 191, 21, 0, 127, 193, 0, 0, 0, 60, 22, 239, 195, 190, 0, 0, 0, 0, 94, 131, 108, 191, 0, 129, 127, 63, 0, 0, 0, 60, 22, 239, 195, 190, 0, 0, 0, 0, 94, 131, 108, 191, 21, 0, 127, 193, 0, 0, 0, 60, 22, 239, 195, 190, 0, 0, 0, 0, 94, 131, 108, 191, 50, 0, 127, 193, 0, 0, 0, 60, 243, 4, 53, 191, 0, 0, 0, 0, 243, 4, 53, 191, 0, 129, 127, 63, 0, 0, 0, 60, 243, 4, 53, 191, 0, 0, 0, 0, 243, 4, 53, 191, 50, 0, 127, 193, 0, 0, 0, 60, 243, 4, 53, 191, 0, 0, 0, 0, 243, 4, 53, 191, 76, 0, 127, 193, 0, 0, 0, 60, 94, 131, 108, 191, 0, 0, 0, 0, 22, 239, 195, 190, 0, 129, 127, 63, 0, 0, 0, 60, 94, 131, 108, 191, 0, 0, 0, 0, 22, 239, 195, 190, 76, 0, 127, 193, 0, 0, 0, 60, 94, 131, 108, 191, 0, 0, 0, 0, 22, 239, 195, 190, 105, 0, 127, 193, 0, 0, 0, 60, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 0, 128, 0, 129, 127, 63, 0, 0, 0, 60, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 0, 128, 127, 21, 127, 63, 0, 0, 0, 60, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 0, 128, 105, 0, 127, 193, 0, 0, 0, 60, 94, 131, 108, 191, 0, 0, 0, 0, 22, 239, 195, 62, 0, 129, 127, 63, 0, 0, 0, 60, 94, 131, 108, 191, 0, 0, 0, 0, 22, 239, 195, 62, 127, 50, 127, 63, 0, 0, 0, 60, 94, 131, 108, 191, 0, 0, 0, 0, 22, 239, 195, 62, 127, 21, 127, 63, 0, 0, 0, 60, 243, 4, 53, 191, 0, 0, 0, 0, 243, 4, 53, 63, 0, 129, 127, 63, 0, 0, 0, 60, 243, 4, 53, 191, 0, 0, 0, 0, 243, 4, 53, 63, 127, 76, 127, 63, 0, 0, 0, 60, 243, 4, 53, 191, 0, 0, 0, 0, 243, 4, 53, 63, 127, 50, 127, 63, 0, 0, 0, 60, 22, 239, 195, 190, 0, 0, 0, 0, 94, 131, 108, 63, 0, 129, 127, 63, 0, 0, 0, 60, 22, 239, 195, 190, 0, 0, 0, 0, 94, 131, 108, 63, 127, 105, 127, 63, 0, 0, 0, 60, 22, 239, 195, 190, 0, 0, 0, 0, 94, 131, 108, 63, 127, 76, 127, 63, 0, 0, 0, 60, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 63, 129, 105, 127, 63, 0, 0, 0, 60, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 63, 0, 129, 127, 63, 0, 0, 0, 60, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 63, 127, 105, 127, 63, 0, 0, 0, 60, 22, 239, 195, 62, 0, 0, 0, 0, 94, 131, 108, 63, 129, 76, 127, 63, 0, 0, 0, 60, 22, 239, 195, 62, 0, 0, 0, 0, 94, 131, 108, 63, 129, 105, 127, 63, 0, 0, 0, 60, 22, 239, 195, 62, 0, 0, 0, 0, 94, 131, 108, 63, 0, 129, 127, 63, 0, 0, 0, 60, 243, 4, 53, 63, 0, 0, 0, 0, 243, 4, 53, 63, 129, 50, 127, 63, 0, 0, 0, 60, 243, 4, 53, 63, 0, 0, 0, 0, 243, 4, 53, 63, 129, 76, 127, 63, 0, 0, 0, 60, 243, 4, 53, 63, 0, 0, 0, 0, 243, 4, 53, 63, 0, 129, 127, 63, 0, 0, 0, 60, 94, 131, 108, 63, 0, 0, 0, 0, 22, 239, 195, 62, 129, 21, 127, 63, 0, 0, 0, 60, 94, 131, 108, 63, 0, 0, 0, 0, 22, 239, 195, 62, 129, 50, 127, 63, 0, 0, 0, 60, 94, 131, 108, 63, 0, 0, 0, 0, 22, 239, 195, 62, 0, 129, 127, 63, 0, 0, 0, 60, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 0, 128, 129, 21, 127, 63, 0, 0, 0, 60, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 0, 128, 151, 0, 127, 193, 0, 0, 0, 60, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 0, 128, 0, 129, 127, 63, 0, 0, 0, 60, 94, 131, 108, 63, 0, 0, 0, 0, 22, 239, 195, 190, 151, 0, 127, 193, 0, 0, 0, 60, 94, 131, 108, 63, 0, 0, 0, 0, 22, 239, 195, 190, 180, 0, 127, 193, 0, 0, 0, 60, 94, 131, 108, 63, 0, 0, 0, 0, 22, 239, 195, 190, 0, 129, 127, 63, 0, 0, 0, 60, 243, 4, 53, 63, 0, 0, 0, 0, 243, 4, 53, 191, 180, 0, 127, 193, 0, 0, 0, 60, 243, 4, 53, 63, 0, 0, 0, 0, 243, 4, 53, 191, 206, 0, 127, 193, 0, 0, 0, 60, 243, 4, 53, 63, 0, 0, 0, 0, 243, 4, 53, 191, 0, 129, 127, 63, 0, 0, 0, 60, 22, 239, 195, 62, 0, 0, 0, 0, 94, 131, 108, 191, 206, 0, 127, 193, 0, 0, 0, 60, 22, 239, 195, 62, 0, 0, 0, 0, 94, 131, 108, 191, 235, 0, 127, 193, 0, 0, 0, 60, 22, 239, 195, 62, 0, 0, 0, 0, 94, 131, 108, 191, 0, 129, 127, 63, 0, 0, 0, 60, 0, 0, 0, 0, 0, 0, 0, 0, 169, 213, 140, 191, 129, 105, 127, 63, 0, 0, 0, 60, 0, 0, 0, 0, 0, 0, 0, 0, 169, 213, 140, 191, 0, 129, 127, 63, 0, 0, 0, 60, 0, 0, 0, 0, 0, 0, 0, 0, 169, 213, 140, 191, 127, 105, 127, 63, 0, 0, 0, 60, 143, 148, 215, 190, 0, 0, 0, 0, 61, 29, 130, 191, 129, 76, 127, 63, 0, 0, 0, 60, 143, 148, 215, 190, 0, 0, 0, 0, 61, 29, 130, 191, 129, 105, 127, 63, 0, 0, 0, 60, 143, 148, 215, 190, 0, 0, 0, 0, 61, 29, 130, 191, 0, 129, 127, 63, 0, 0, 0, 60, 147, 43, 71, 191, 0, 0, 0, 0, 147, 43, 71, 191, 129, 50, 127, 63, 0, 0, 0, 60, 147, 43, 71, 191, 0, 0, 0, 0, 147, 43, 71, 191, 129, 76, 127, 63, 0, 0, 0, 60, 147, 43, 71, 191, 0, 0, 0, 0, 147, 43, 71, 191, 0, 129, 127, 63, 0, 0, 0, 60, 61, 29, 130, 191, 0, 0, 0, 0, 143, 148, 215, 190, 129, 21, 127, 63, 0, 0, 0, 60, 61, 29, 130, 191, 0, 0, 0, 0, 143, 148, 215, 190, 129, 50, 127, 63, 0, 0, 0, 60, 61, 29, 130, 191, 0, 0, 0, 0, 143, 148, 215, 190, 0, 129, 127, 63, 0, 0, 0, 60, 169, 213, 140, 191, 0, 0, 0, 0, 0, 0, 0, 128, 129, 21, 127, 63, 0, 0, 0, 60, 169, 213, 140, 191, 0, 0, 0, 0, 0, 0, 0, 128, 151, 0, 127, 193, 0, 0, 0, 60, 169, 213, 140, 191, 0, 0, 0, 0, 0, 0, 0, 128, 0, 129, 127, 63, 0, 0, 0, 60, 61, 29, 130, 191, 0, 0, 0, 0, 143, 148, 215, 62, 151, 0, 127, 193, 0, 0, 0, 60, 61, 29, 130, 191, 0, 0, 0, 0, 143, 148, 215, 62, 180, 0, 127, 193, 0, 0, 0, 60, 61, 29, 130, 191, 0, 0, 0, 0, 143, 148, 215, 62, 0, 129, 127, 63, 0, 0, 0, 60, 147, 43, 71, 191, 0, 0, 0, 0, 147, 43, 71, 63, 180, 0, 127, 193, 0, 0, 0, 60, 147, 43, 71, 191, 0, 0, 0, 0, 147, 43, 71, 63, 206, 0, 127, 193, 0, 0, 0, 60, 147, 43, 71, 191, 0, 0, 0, 0, 147, 43, 71, 63, 0, 129, 127, 63, 0, 0, 0, 60, 143, 148, 215, 190, 0, 0, 0, 0, 61, 29, 130, 63, 206, 0, 127, 193, 0, 0, 0, 60, 143, 148, 215, 190, 0, 0, 0, 0, 61, 29, 130, 63, 235, 0, 127, 193, 0, 0, 0, 60, 143, 148, 215, 190, 0, 0, 0, 0, 61, 29, 130, 63, 0, 129, 127, 63, 0, 0, 0, 60, 0, 0, 0, 0, 0, 0, 0, 0, 169, 213, 140, 63, 235, 0, 127, 193, 0, 0, 0, 60, 0, 0, 0, 0, 0, 0, 0, 0, 169, 213, 140, 63, 0, 129, 127, 63, 0, 0, 0, 60, 0, 0, 0, 0, 0, 0, 0, 0, 169, 213, 140, 63, 21, 0, 127, 193, 0, 0, 0, 60, 143, 148, 215, 62, 0, 0, 0, 0, 61, 29, 130, 63, 0, 129, 127, 63, 0, 0, 0, 60, 143, 148, 215, 62, 0, 0, 0, 0, 61, 29, 130, 63, 21, 0, 127, 193, 0, 0, 0, 60, 143, 148, 215, 62, 0, 0, 0, 0, 61, 29, 130, 63, 50, 0, 127, 193, 0, 0, 0, 60, 147, 43, 71, 63, 0, 0, 0, 0, 147, 43, 71, 63, 0, 129, 127, 63, 0, 0, 0, 60, 147, 43, 71, 63, 0, 0, 0, 0, 147, 43, 71, 63, 50, 0, 127, 193, 0, 0, 0, 60, 147, 43, 71, 63, 0, 0, 0, 0, 147, 43, 71, 63, 76, 0, 127, 193, 0, 0, 0, 60, 61, 29, 130, 63, 0, 0, 0, 0, 143, 148, 215, 62, 0, 129, 127, 63, 0, 0, 0, 60, 61, 29, 130, 63, 0, 0, 0, 0, 143, 148, 215, 62, 76, 0, 127, 193, 0, 0, 0, 60, 61, 29, 130, 63, 0, 0, 0, 0, 143, 148, 215, 62, 105, 0, 127, 193, 0, 0, 0, 60, 169, 213, 140, 63, 0, 0, 0, 0, 0, 0, 0, 128, 0, 129, 127, 63, 0, 0, 0, 60, 169, 213, 140, 63, 0, 0, 0, 0, 0, 0, 0, 128, 127, 21, 127, 63, 0, 0, 0, 60, 169, 213, 140, 63, 0, 0, 0, 0, 0, 0, 0, 128, 105, 0, 127, 193, 0, 0, 0, 60, 61, 29, 130, 63, 0, 0, 0, 0, 143, 148, 215, 190, 0, 129, 127, 63, 0, 0, 0, 60, 61, 29, 130, 63, 0, 0, 0, 0, 143, 148, 215, 190, 127, 50, 127, 63, 0, 0, 0, 60, 61, 29, 130, 63, 0, 0, 0, 0, 143, 148, 215, 190, 127, 21, 127, 63, 0, 0, 0, 60, 147, 43, 71, 63, 0, 0, 0, 0, 147, 43, 71, 191, 0, 129, 127, 63, 0, 0, 0, 60, 147, 43, 71, 63, 0, 0, 0, 0, 147, 43, 71, 191, 127, 76, 127, 63, 0, 0, 0, 60, 147, 43, 71, 63, 0, 0, 0, 0, 147, 43, 71, 191, 127, 50, 127, 63, 0, 0, 0, 60, 143, 148, 215, 62, 0, 0, 0, 0, 61, 29, 130, 191, 0, 129, 127, 63, 0, 0, 0, 60, 143, 148, 215, 62, 0, 0, 0, 0, 61, 29, 130, 191, 127, 105, 127, 63, 0, 0, 0, 60, 143, 148, 215, 62, 0, 0, 0, 0, 61, 29, 130, 191, 127, 76, 127, 63, 0, 0, 0, 60, 22, 239, 195, 190, 196, 87, 135, 62, 94, 131, 108, 191, 0, 127, 127, 63, 0, 0, 0, 60, 22, 239, 195, 190, 196, 87, 135, 62, 94, 131, 108, 191, 21, 0, 127, 193, 0, 0, 0, 60, 22, 239, 195, 190, 196, 87, 135, 62, 94, 131, 108, 191, 50, 0, 127, 193, 0, 0, 0, 60, 0, 0, 0, 0, 196, 87, 135, 62, 0, 0, 128, 191, 235, 0, 127, 193, 0, 0, 0, 60, 0, 0, 0, 0, 196, 87, 135, 62, 0, 0, 128, 191, 0, 127, 127, 63, 0, 0, 0, 60, 0, 0, 0, 0, 196, 87, 135, 62, 0, 0, 128, 191, 21, 0, 127, 193, 0, 0, 0, 60, 243, 4, 53, 191, 196, 87, 135, 62, 243, 4, 53, 191, 0, 127, 127, 63, 0, 0, 0, 60, 243, 4, 53, 191, 196, 87, 135, 62, 243, 4, 53, 191, 50, 0, 127, 193, 0, 0, 0, 60, 243, 4, 53, 191, 196, 87, 135, 62, 243, 4, 53, 191, 76, 0, 127, 193, 0, 0, 0, 60, 94, 131, 108, 191, 196, 87, 135, 62, 22, 239, 195, 190, 0, 127, 127, 63, 0, 0, 0, 60, 94, 131, 108, 191, 196, 87, 135, 62, 22, 239, 195, 190, 76, 0, 127, 193, 0, 0, 0, 60, 94, 131, 108, 191, 196, 87, 135, 62, 22, 239, 195, 190, 105, 0, 127, 193, 0, 0, 0, 60, 0, 0, 128, 191, 196, 87, 135, 62, 0, 0, 0, 128, 0, 127, 127, 63, 0, 0, 0, 60, 0, 0, 128, 191, 196, 87, 135, 62, 0, 0, 0, 128, 127, 21, 127, 63, 0, 0, 0, 60, 0, 0, 128, 191, 196, 87, 135, 62, 0, 0, 0, 128, 105, 0, 127, 193, 0, 0, 0, 60, 94, 131, 108, 191, 196, 87, 135, 62, 22, 239, 195, 62, 0, 127, 127, 63, 0, 0, 0, 60, 94, 131, 108, 191, 196, 87, 135, 62, 22, 239, 195, 62, 127, 50, 127, 63, 0, 0, 0, 60, 94, 131, 108, 191, 196, 87, 135, 62, 22, 239, 195, 62, 127, 21, 127, 63, 0, 0, 0, 60, 243, 4, 53, 191, 196, 87, 135, 62, 243, 4, 53, 63, 0, 127, 127, 63, 0, 0, 0, 60, 243, 4, 53, 191, 196, 87, 135, 62, 243, 4, 53, 63, 127, 76, 127, 63, 0, 0, 0, 60, 243, 4, 53, 191, 196, 87, 135, 62, 243, 4, 53, 63, 127, 50, 127, 63, 0, 0, 0, 60, 22, 239, 195, 190, 196, 87, 135, 62, 94, 131, 108, 63, 0, 127, 127, 63, 0, 0, 0, 60, 22, 239, 195, 190, 196, 87, 135, 62, 94, 131, 108, 63, 127, 105, 127, 63, 0, 0, 0, 60, 22, 239, 195, 190, 196, 87, 135, 62, 94, 131, 108, 63, 127, 76, 127, 63, 0, 0, 0, 60, 0, 0, 0, 0, 196, 87, 135, 62, 0, 0, 128, 63, 129, 105, 127, 63, 0, 0, 0, 60, 0, 0, 0, 0, 196, 87, 135, 62, 0, 0, 128, 63, 0, 127, 127, 63, 0, 0, 0, 60, 0, 0, 0, 0, 196, 87, 135, 62, 0, 0, 128, 63, 127, 105, 127, 63, 0, 0, 0, 60, 22, 239, 195, 62, 196, 87, 135, 62, 94, 131, 108, 63, 129, 76, 127, 63, 0, 0, 0, 60, 22, 239, 195, 62, 196, 87, 135, 62, 94, 131, 108, 63, 129, 105, 127, 63, 0, 0, 0, 60, 22, 239, 195, 62, 196, 87, 135, 62, 94, 131, 108, 63, 0, 127, 127, 63, 0, 0, 0, 60, 243, 4, 53, 63, 196, 87, 135, 62, 243, 4, 53, 63, 129, 50, 127, 63, 0, 0, 0, 60, 243, 4, 53, 63, 196, 87, 135, 62, 243, 4, 53, 63, 129, 76, 127, 63, 0, 0, 0, 60, 243, 4, 53, 63, 196, 87, 135, 62, 243, 4, 53, 63, 0, 127, 127, 63, 0, 0, 0, 60, 94, 131, 108, 63, 196, 87, 135, 62, 22, 239, 195, 62, 129, 21, 127, 63, 0, 0, 0, 60, 94, 131, 108, 63, 196, 87, 135, 62, 22, 239, 195, 62, 129, 50, 127, 63, 0, 0, 0, 60, 94, 131, 108, 63, 196, 87, 135, 62, 22, 239, 195, 62, 0, 127, 127, 63, 0, 0, 0, 60, 0, 0, 128, 63, 196, 87, 135, 62, 0, 0, 0, 128, 129, 21, 127, 63, 0, 0, 0, 60, 0, 0, 128, 63, 196, 87, 135, 62, 0, 0, 0, 128, 151, 0, 127, 193, 0, 0, 0, 60, 0, 0, 128, 63, 196, 87, 135, 62, 0, 0, 0, 128, 0, 127, 127, 63, 0, 0, 0, 60, 94, 131, 108, 63, 196, 87, 135, 62, 22, 239, 195, 190, 151, 0, 127, 193, 0, 0, 0, 60, 94, 131, 108, 63, 196, 87, 135, 62, 22, 239, 195, 190, 180, 0, 127, 193, 0, 0, 0, 60, 94, 131, 108, 63, 196, 87, 135, 62, 22, 239, 195, 190, 0, 127, 127, 63, 0, 0, 0, 60, 243, 4, 53, 63, 196, 87, 135, 62, 243, 4, 53, 191, 180, 0, 127, 193, 0, 0, 0, 60, 243, 4, 53, 63, 196, 87, 135, 62, 243, 4, 53, 191, 206, 0, 127, 193, 0, 0, 0, 60, 243, 4, 53, 63, 196, 87, 135, 62, 243, 4, 53, 191, 0, 127, 127, 63, 0, 0, 0, 60, 22, 239, 195, 62, 196, 87, 135, 62, 94, 131, 108, 191, 206, 0, 127, 193, 0, 0, 0, 60, 22, 239, 195, 62, 196, 87, 135, 62, 94, 131, 108, 191, 235, 0, 127, 193, 0, 0, 0, 60, 22, 239, 195, 62, 196, 87, 135, 62, 94, 131, 108, 191, 0, 127, 127, 63, 0, 0, 0, 60, 143, 148, 215, 190, 196, 87, 135, 62, 61, 29, 130, 191, 129, 76, 127, 63, 0, 0, 0, 60, 143, 148, 215, 190, 196, 87, 135, 62, 61, 29, 130, 191, 129, 105, 127, 63, 0, 0, 0, 60, 143, 148, 215, 190, 196, 87, 135, 62, 61, 29, 130, 191, 0, 127, 127, 63, 0, 0, 0, 60, 0, 0, 0, 0, 196, 87, 135, 62, 169, 213, 140, 191, 129, 105, 127, 63, 0, 0, 0, 60, 0, 0, 0, 0, 196, 87, 135, 62, 169, 213, 140, 191, 0, 127, 127, 63, 0, 0, 0, 60, 0, 0, 0, 0, 196, 87, 135, 62, 169, 213, 140, 191, 127, 105, 127, 63, 0, 0, 0, 60, 147, 43, 71, 191, 196, 87, 135, 62, 147, 43, 71, 191, 129, 50, 127, 63, 0, 0, 0, 60, 147, 43, 71, 191, 196, 87, 135, 62, 147, 43, 71, 191, 129, 76, 127, 63, 0, 0, 0, 60, 147, 43, 71, 191, 196, 87, 135, 62, 147, 43, 71, 191, 0, 127, 127, 63, 0, 0, 0, 60, 61, 29, 130, 191, 196, 87, 135, 62, 143, 148, 215, 190, 129, 21, 127, 63, 0, 0, 0, 60, 61, 29, 130, 191, 196, 87, 135, 62, 143, 148, 215, 190, 129, 50, 127, 63, 0, 0, 0, 60, 61, 29, 130, 191, 196, 87, 135, 62, 143, 148, 215, 190, 0, 127, 127, 63, 0, 0, 0, 60, 169, 213, 140, 191, 196, 87, 135, 62, 0, 0, 0, 128, 129, 21, 127, 63, 0, 0, 0, 60, 169, 213, 140, 191, 196, 87, 135, 62, 0, 0, 0, 128, 151, 0, 127, 193, 0, 0, 0, 60, 169, 213, 140, 191, 196, 87, 135, 62, 0, 0, 0, 128, 0, 127, 127, 63, 0, 0, 0, 60, 61, 29, 130, 191, 196, 87, 135, 62, 143, 148, 215, 62, 151, 0, 127, 193, 0, 0, 0, 60, 61, 29, 130, 191, 196, 87, 135, 62, 143, 148, 215, 62, 180, 0, 127, 193, 0, 0, 0, 60, 61, 29, 130, 191, 196, 87, 135, 62, 143, 148, 215, 62, 0, 127, 127, 63, 0, 0, 0, 60, 147, 43, 71, 191, 196, 87, 135, 62, 147, 43, 71, 63, 180, 0, 127, 193, 0, 0, 0, 60, 147, 43, 71, 191, 196, 87, 135, 62, 147, 43, 71, 63, 206, 0, 127, 193, 0, 0, 0, 60, 147, 43, 71, 191, 196, 87, 135, 62, 147, 43, 71, 63, 0, 127, 127, 63, 0, 0, 0, 60, 143, 148, 215, 190, 196, 87, 135, 62, 61, 29, 130, 63, 206, 0, 127, 193, 0, 0, 0, 60, 143, 148, 215, 190, 196, 87, 135, 62, 61, 29, 130, 63, 235, 0, 127, 193, 0, 0, 0, 60, 143, 148, 215, 190, 196, 87, 135, 62, 61, 29, 130, 63, 0, 127, 127, 63, 0, 0, 0, 60, 0, 0, 0, 0, 196, 87, 135, 62, 169, 213, 140, 63, 235, 0, 127, 193, 0, 0, 0, 60, 0, 0, 0, 0, 196, 87, 135, 62, 169, 213, 140, 63, 0, 127, 127, 63, 0, 0, 0, 60, 0, 0, 0, 0, 196, 87, 135, 62, 169, 213, 140, 63, 21, 0, 127, 193, 0, 0, 0, 60, 143, 148, 215, 62, 196, 87, 135, 62, 61, 29, 130, 63, 0, 127, 127, 63, 0, 0, 0, 60, 143, 148, 215, 62, 196, 87, 135, 62, 61, 29, 130, 63, 21, 0, 127, 193, 0, 0, 0, 60, 143, 148, 215, 62, 196, 87, 135, 62, 61, 29, 130, 63, 50, 0, 127, 193, 0, 0, 0, 60, 147, 43, 71, 63, 196, 87, 135, 62, 147, 43, 71, 63, 0, 127, 127, 63, 0, 0, 0, 60, 147, 43, 71, 63, 196, 87, 135, 62, 147, 43, 71, 63, 50, 0, 127, 193, 0, 0, 0, 60, 147, 43, 71, 63, 196, 87, 135, 62, 147, 43, 71, 63, 76, 0, 127, 193, 0, 0, 0, 60, 61, 29, 130, 63, 196, 87, 135, 62, 143, 148, 215, 62, 0, 127, 127, 63, 0, 0, 0, 60, 61, 29, 130, 63, 196, 87, 135, 62, 143, 148, 215, 62, 76, 0, 127, 193, 0, 0, 0, 60, 61, 29, 130, 63, 196, 87, 135, 62, 143, 148, 215, 62, 105, 0, 127, 193, 0, 0, 0, 60, 169, 213, 140, 63, 196, 87, 135, 62, 0, 0, 0, 128, 0, 127, 127, 63, 0, 0, 0, 60, 169, 213, 140, 63, 196, 87, 135, 62, 0, 0, 0, 128, 127, 21, 127, 63, 0, 0, 0, 60, 169, 213, 140, 63, 196, 87, 135, 62, 0, 0, 0, 128, 105, 0, 127, 193, 0, 0, 0, 60, 61, 29, 130, 63, 196, 87, 135, 62, 143, 148, 215, 190, 0, 127, 127, 63, 0, 0, 0, 60, 61, 29, 130, 63, 196, 87, 135, 62, 143, 148, 215, 190, 127, 50, 127, 63, 0, 0, 0, 60, 61, 29, 130, 63, 196, 87, 135, 62, 143, 148, 215, 190, 127, 21, 127, 63, 0, 0, 0, 60, 147, 43, 71, 63, 196, 87, 135, 62, 147, 43, 71, 191, 0, 127, 127, 63, 0, 0, 0, 60, 147, 43, 71, 63, 196, 87, 135, 62, 147, 43, 71, 191, 127, 76, 127, 63, 0, 0, 0, 60, 147, 43, 71, 63, 196, 87, 135, 62, 147, 43, 71, 191, 127, 50, 127, 63, 0, 0, 0, 60, 143, 148, 215, 62, 196, 87, 135, 62, 61, 29, 130, 191, 0, 127, 127, 63, 0, 0, 0, 60, 143, 148, 215, 62, 196, 87, 135, 62, 61, 29, 130, 191, 127, 105, 127, 63, 0, 0, 0, 60, 143, 148, 215, 62, 196, 87, 135, 62, 61, 29, 130, 191, 127, 76, 127, 63, 0, 0, 0, 60 ),
"array_index_data": PoolByteArray( 9, 0, 56, 0, 59, 0, 9, 0, 6, 0, 56, 0, 35, 0, 78, 0, 81, 0, 35, 0, 32, 0, 78, 0, 12, 0, 59, 0, 62, 0, 12, 0, 9, 0, 59, 0, 38, 0, 81, 0, 84, 0, 38, 0, 35, 0, 81, 0, 15, 0, 62, 0, 65, 0, 15, 0, 12, 0, 62, 0, 41, 0, 84, 0, 87, 0, 41, 0, 38, 0, 84, 0, 18, 0, 65, 0, 68, 0, 18, 0, 15, 0, 65, 0, 44, 0, 87, 0, 90, 0, 44, 0, 41, 0, 87, 0, 21, 0, 68, 0, 71, 0, 21, 0, 18, 0, 68, 0, 47, 0, 90, 0, 93, 0, 47, 0, 44, 0, 90, 0, 25, 0, 71, 0, 73, 0, 25, 0, 21, 0, 71, 0, 3, 0, 49, 0, 53, 0, 3, 0, 1, 0, 49, 0, 1, 0, 93, 0, 49, 0, 1, 0, 47, 0, 93, 0, 29, 0, 73, 0, 75, 0, 29, 0, 25, 0, 73, 0, 6, 0, 53, 0, 56, 0, 6, 0, 3, 0, 53, 0, 32, 0, 75, 0, 78, 0, 32, 0, 29, 0, 75, 0, 105, 0, 152, 0, 102, 0, 105, 0, 155, 0, 152, 0, 131, 0, 174, 0, 128, 0, 131, 0, 177, 0, 174, 0, 108, 0, 155, 0, 105, 0, 108, 0, 158, 0, 155, 0, 134, 0, 177, 0, 131, 0, 134, 0, 180, 0, 177, 0, 111, 0, 158, 0, 108, 0, 111, 0, 161, 0, 158, 0, 137, 0, 180, 0, 134, 0, 137, 0, 183, 0, 180, 0, 114, 0, 161, 0, 111, 0, 114, 0, 164, 0, 161, 0, 140, 0, 183, 0, 137, 0, 140, 0, 186, 0, 183, 0, 117, 0, 164, 0, 114, 0, 117, 0, 167, 0, 164, 0, 143, 0, 186, 0, 140, 0, 143, 0, 189, 0, 186, 0, 121, 0, 167, 0, 117, 0, 121, 0, 169, 0, 167, 0, 96, 0, 148, 0, 100, 0, 96, 0, 146, 0, 148, 0, 100, 0, 189, 0, 143, 0, 100, 0, 148, 0, 189, 0, 125, 0, 169, 0, 121, 0, 125, 0, 171, 0, 169, 0, 102, 0, 146, 0, 96, 0, 102, 0, 152, 0, 146, 0, 128, 0, 171, 0, 125, 0, 128, 0, 174, 0, 171, 0, 26, 0, 118, 0, 22, 0, 26, 0, 122, 0, 118, 0, 64, 0, 162, 0, 66, 0, 64, 0, 160, 0, 162, 0, 28, 0, 120, 0, 24, 0, 28, 0, 124, 0, 120, 0, 67, 0, 165, 0, 69, 0, 67, 0, 163, 0, 165, 0, 31, 0, 123, 0, 27, 0, 31, 0, 127, 0, 123, 0, 70, 0, 168, 0, 72, 0, 70, 0, 166, 0, 168, 0, 34, 0, 126, 0, 30, 0, 34, 0, 130, 0, 126, 0, 74, 0, 172, 0, 76, 0, 74, 0, 170, 0, 172, 0, 36, 0, 129, 0, 33, 0, 36, 0, 132, 0, 129, 0, 77, 0, 175, 0, 79, 0, 77, 0, 173, 0, 175, 0, 39, 0, 133, 0, 37, 0, 39, 0, 135, 0, 133, 0, 80, 0, 178, 0, 82, 0, 80, 0, 176, 0, 178, 0, 42, 0, 136, 0, 40, 0, 42, 0, 138, 0, 136, 0, 4, 0, 101, 0, 2, 0, 4, 0, 97, 0, 101, 0, 83, 0, 182, 0, 86, 0, 83, 0, 179, 0, 182, 0, 45, 0, 139, 0, 43, 0, 45, 0, 141, 0, 139, 0, 7, 0, 98, 0, 5, 0, 7, 0, 103, 0, 98, 0, 85, 0, 185, 0, 89, 0, 85, 0, 181, 0, 185, 0, 0, 0, 142, 0, 46, 0, 0, 0, 99, 0, 142, 0, 10, 0, 104, 0, 8, 0, 10, 0, 106, 0, 104, 0, 88, 0, 188, 0, 92, 0, 88, 0, 184, 0, 188, 0, 48, 0, 145, 0, 52, 0, 48, 0, 147, 0, 145, 0, 14, 0, 107, 0, 11, 0, 14, 0, 110, 0, 107, 0, 91, 0, 191, 0, 95, 0, 91, 0, 187, 0, 191, 0, 51, 0, 151, 0, 55, 0, 51, 0, 144, 0, 151, 0, 17, 0, 109, 0, 13, 0, 17, 0, 113, 0, 109, 0, 94, 0, 149, 0, 50, 0, 94, 0, 190, 0, 149, 0, 54, 0, 154, 0, 58, 0, 54, 0, 150, 0, 154, 0, 20, 0, 112, 0, 16, 0, 20, 0, 116, 0, 112, 0, 57, 0, 156, 0, 60, 0, 57, 0, 153, 0, 156, 0, 23, 0, 115, 0, 19, 0, 23, 0, 119, 0, 115, 0, 61, 0, 159, 0, 63, 0, 61, 0, 157, 0, 159, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 384,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 192
}

[node name="Angel1" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Circle" parent="." index="0"]
transform = Transform( 2.67496e-15, -6.55671e-08, -1.4, -1.4, -6.55671e-08, 0, -6.11959e-08, 1.5, -6.11959e-08, 0, 0, 0 )
material/0 = ExtResource( 2 )

[node name="Circle001" parent="." index="1"]
transform = Transform( 1.15, 0.21967, -1.96317, 1.62635, 0.75, 1.15, 1.15, -1.28033, 0.336827, 0, 0, 0 )
material/0 = ExtResource( 2 )

[node name="Circle002" parent="." index="2"]
transform = Transform( 0.85, 1.28033, 0.248959, -1.20208, 0.75, -0.85, -0.85, 0.21967, 1.45104, 0, 0, 0 )
material/0 = ExtResource( 2 )

[node name="Circle003" parent="." index="3"]
transform = Transform( 1.73205, 0.649519, -0.5, -1, 1.125, -0.866025, 0, 0.75, 1.73205, 0, 0, 0 )
material/0 = ExtResource( 2 )

[node name="Area" type="Area" parent="." index="4"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="Area" index="0"]
transform = Transform( 1.26851, 0, 0, 0, 1.26851, 0, 0, 0, 1.26851, 0, 0, 0 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]
anims/RESET = SubResource( 2 )
anims/angel1death = ExtResource( 4 )

[node name="Timer" type="Timer" parent="." index="6"]
wait_time = 3.0
one_shot = true

[node name="Spatial" type="Spatial" parent="." index="7"]

[node name="Circle004" type="MeshInstance" parent="Spatial" index="0"]
transform = Transform( 4.05066e-16, -5.24537e-08, 0.594, -0.212, -5.24537e-08, 1.23552e-21, 9.26681e-09, -1.2, -2.59646e-08, 0, 0, 0.211107 )
mesh = SubResource( 5 )
skeleton = NodePath("../..")
material/0 = ExtResource( 2 )

[node name="shootingPoint" type="Spatial" parent="Spatial" index="1"]

[node name="shootTimer" type="Timer" parent="." index="9"]
wait_time = 4.0
autostart = true

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="." index="10"]
stream = ExtResource( 5 )
unit_db = 15.0
unit_size = 3.0

[node name="AudioStreamPlayer3D2" type="AudioStreamPlayer3D" parent="." index="11"]
stream = ExtResource( 5 )
unit_db = 15.0
unit_size = 3.0

[node name="Sphere" parent="." index="12"]
transform = Transform( 0.156868, 0, 0, 0, 0.156868, 0, 0, 0, 0.156868, 0, 0, 0.0719403 )
material/0 = ExtResource( 2 )

[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="shootTimer" to="." method="_on_shootTimer_timeout"]
